syntax = "proto3";

package messaging;

service MessagingService {
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}
  rpc ReceiveMessage (MessageRequest) returns (stream MessageResponse) {}
}

message MessageRequest {
  string sender = 1;
  string recipient = 2;
  string message = 3;
}

message MessageResponse {
  string sender = 1;
  string recipient = 2;
  string message = 3;
  int64 timestamp = 4;
}